cta overflow fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,22 +20,6 @@
   content: "";
 }
 
-.mask-gradient {
-  mask-image: linear-gradient(
-    to bottom,
-    transparent,
-    black 20%,
-    black 80%,
-    transparent
-  );
-  -webkit-mask-image: linear-gradient(
-    to bottom,
-    transparent,
-    black 20%,
-    black 80%,
-    transparent
-  );
-}
 
 .signal-line {
   --rotation: 90deg;
